--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,12 +9,15 @@ file.reference.groovy-all-2.1.3.jar=lib\\libreport\\groovy-all-2.1.3.jar
 file.reference.itext-2.1.7.jar=lib\\libreport\\itext-2.1.7.jar
 file.reference.itextpdf-5.3.4.jar=lib\\libreport\\itextpdf-5.3.4.jar
 file.reference.jasperreports-6.10.0.jar=lib\\libreport\\jasperreports-6.10.0.jar
+file.reference.javax.servlet-api-4.0.1.jar=lib\\Jchart\\javax.servlet-api-4.0.1.jar
+file.reference.jcommon-1.0.23.jar=lib\\Jchart\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.5.4.jar=lib\\Jchart\\jfreechart-1.5.4.jar
+file.reference.junit-4.12.jar=lib\\Jchart\\junit-4.12.jar
 file.reference.xercesimpl-2.7.0.jar=lib\\libreport\\xercesimpl-2.7.0.jar
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 excludes=
-file.reference.servlet.jar=lib\\Jchart\\servlet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 ${file.reference.jcalendar-1.4.jar-1}=>>>>>>> origin/master
 ${file.reference.jxl-2.6.9.jar}=${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
@@ -31,7 +34,6 @@ file.reference.jxl-2.6.9.jar=D\:\\DuAn1_moiTruong\\jxl-2.6.9.jar\\jxl-2.6.9.jar
 annotation.processing.enabled=true
 debug.modulepath=${run.modulepath}
 file.reference.mssql-jdbc-9.4.0.jre16.jar=D\:\\Java3\\Bai Tap\\Slide 5\\DataU\\mssql-jdbc-9.4.0.jre16.jar
-file.reference.jfreechart-1.0.1.jar=lib\\Jchart\\jfreechart-1.0.1.jar
 file.reference.barcode.jar-2=D\:\\DuAn1_moiTruong\\writeBarCore\\barcode.jar
 file.reference.barcode.jar-1=lib\\writeBarCore\\barcode.jar
 file.reference.poi-4.0.1.jar=lib\\thuvienpoi\\poi-4.0.1.jar
@@ -49,11 +51,9 @@ javadoc.additionalparam=
 ${file.reference.mssql-jdbc-9.4.0.jre16.jar-1}=${libs.absolutelayout.classpath}\:\=\=\=\=\=\=\=
 file.reference.slf4j-log4j12-1.6.2.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\slf4j-log4j12-1.6.2.jar
 jnlp.signed=false
-file.reference.gnujaxp.jar=lib\\Jchart\\gnujaxp.jar
 file.reference.javax.mail.jar=D\:\\DuAn\\DuAnNhom6\\lib\\javax.mail.jar
 file.reference.slf4j-log4j12-1.6.2.jar-1=lib\\QuetQR\\slf4j-log4j12-1.6.2.jar
 ${file.reference.xmlbeans-3.0.2.jar}=${file.reference.bridj-0.6.2-windows-only.jar-1}\:${file.reference.core-3.3.0.jar-1}\:${file.reference.javase-3.3.0.jar-1}\:${file.reference.log4j-1.2.17.jar-1}\:${file.reference.slf4j-api-1.6.2.jar-1}\:${file.reference.slf4j-log4j12-1.6.2.jar-1}\:<<<<<<< HEAD
-file.reference.jcommon-1.0.0.jar=lib\\Jchart\\jcommon-1.0.0.jar
 file.reference.webcam-capture-0.3.12.jar-1=lib\\QuetQR\\webcam-capture-0.3.12.jar
 manifest.custom.permissions=
 ${file.reference.AbsoluteLayout.jar}=<<<<<<< HEAD
@@ -154,10 +154,6 @@ file.reference.slf4j-api-1.6.2.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\slf4j-api-1.6
 file.reference.javase-3.3.0.jar=D\:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\javase-3.3.0.jar
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.gnujaxp.jar}:\
-    ${file.reference.jcommon-1.0.0.jar}:\
-    ${file.reference.jfreechart-1.0.1.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.activation.jar}:\
     ${file.reference.javax.mail-1.6.2.jar-1}:\
     ${file.reference.javax.mail.jar-1}:\
@@ -190,7 +186,11 @@ javac.classpath=\
     ${file.reference.itext-2.1.7.jar}:\
     ${file.reference.itextpdf-5.3.4.jar}:\
     ${file.reference.jasperreports-6.10.0.jar}:\
-    ${file.reference.xercesimpl-2.7.0.jar}
+    ${file.reference.xercesimpl-2.7.0.jar}:\
+    ${file.reference.javax.servlet-api-4.0.1.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.5.4.jar}:\
+    ${file.reference.junit-4.12.jar}
 build.classes.excludes=**/*.java,**/*.form
 dist.jlink.dir=${dist.dir}/jlink
 dist.jar=${dist.dir}/PhanMemBanGiay.jar
